--- a/index-2.html
+++ b/index-2.html
@@ -15,7 +15,7 @@
     />
 
     <!-- title of the browser tab -->
-    <title>Anup - Portfolio</title>
+    <title>Amit - Portfolio</title>
 
     <!-- favicon -->
     <link rel="icon" href="assets/favicon.ico" />
@@ -71,8 +71,8 @@
         >
           <div class="container">
             <!-- logo -->
-            <div class="logo" title="Anup">
-              <h1><a href="#">ANUP</a></h1>
+            <div class="logo" title="Amit">
+              <h1><a href="#">AMIT</a></h1>
             </div>
 
             <!-- nav links -->
@@ -108,8 +108,8 @@
                       <h4 class="block-title">Email</h4>
                       <ul>
                         <li>
-                          <a href="mailto:kumaranup594@gmail.com"
-                            >kumaranup594@gmail.com</a
+                          <a href="mailto:kumarAmit594@gmail.com"
+                            >amit.aaryan480@gmail.com</a
                           >
                         </li>
                       </ul>
@@ -117,7 +117,7 @@
                     <li class="col-lg-4">
                       <h4 class="block-title">Address</h4>
                       <ul>
-                        <li>114B, 3rd floor Dwarka Mor, New Delhi</li>
+                        <li>A-151, Gokul Home, Sector 63 A, Noida, UP, India</li>
                       </ul>
                     </li>
                     <li class="col-lg-4">
@@ -125,7 +125,7 @@
                       <ul>
                         <li>
                           <a href="tel:+917835851114" class="ltr-dir"
-                            >+91 7835851114</a
+                            >+91 7903915480</a
                           >
                         </li>
                       </ul>
@@ -197,7 +197,7 @@
             <ul>
               <li>
                 <a
-                  href="https://github.com/kumaranup594/"
+                  href="https://github.com/kumarAmit594/"
                   target="_blank"
                   rel="noreferrer"
                   v-tooltip="{text: 'GitHub', dir: 'right'}"
@@ -207,7 +207,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.instagram.com/ianup.nexgi/"
+                  href="https://www.instagram.com/iAmit.nexgi/"
                   target="_blank"
                   rel="noreferrer"
                   v-tooltip="{text: 'Instagram', dir: 'right'}"
@@ -306,7 +306,7 @@
                 <div class="text-box">
                   <span class="subtitle">about me</span>
                   <h2>
-                    Hi! I'm Anup from India
+                    Hi! I'm Amit from India
                     <br />
                     Full Stack Web Developer
                   </h2>
@@ -318,7 +318,7 @@
                     backend.
                   </p>
                   <p>
-                    In last 9 years. I have worked with 25+ openSource project,
+                    In last 3 years. I have worked with 25+ openSource project,
                     50+ marketing integrated, handled 100+ direct clients
                     queries and provided them customised solution. So I can
                     deliver you solution beyond just development using master of
@@ -624,7 +624,7 @@
                     <img src="assets/images/icons/address.png" alt="Address" />
                     <div>
                       <strong>Address:</strong>
-                      114B, 3rd floor Dwarka Mor, New Delhi
+                       A-151, Gokul Home, Sector 63 A, Noida, UP, India
                     </div>
                   </li>
                   <li>
@@ -633,8 +633,8 @@
                       <strong>Phone:</strong>
                       <ul>
                         <li>
-                          <a href="tel:+917835851114" class="ltr-dir"
-                            >+91 7835851114</a
+                          <a href="tel:+917903915480" class="ltr-dir"
+                            >+91 7903915480</a
                           >
                         </li>
                       </ul>
@@ -646,8 +646,8 @@
                       <strong>Email:</strong>
                       <ul>
                         <li>
-                          <a href="mailto:kumaranup594@gmail.com"
-                            >kumaranup594@gmail.com</a
+                          <a href="mailto:amit.aaryan480@gmail.com"
+                            >amit.aaryan480@gmail.com</a
                           >
                         </li>
                       </ul>
@@ -659,7 +659,7 @@
                 <ul class="social">
                   <li>
                     <a
-                      href="https://github.com/kumaranup594/"
+                      href="https://github.com/amit-neo/"
                       target="_blank"
                       rel="noreferrer"
                       v-tooltip="{text: 'GitHub', dir: 'top'}"
@@ -669,7 +669,7 @@
                   </li>
                   <li>
                     <a
-                      href="https://www.instagram.com/ianup.nexgi/"
+                      href="https://www.instagram.com/im_amit.aaryan/"
                       target="_blank"
                       rel="noreferrer"
                       v-tooltip="{text: 'Instagram', dir: 'top'}"
@@ -705,7 +705,7 @@
                 <form
                   ref="contactForm"
                   class="contact-form form-styled"
-                  action="https://ai.nexgi.com/leads/web_api/save_lead"
+                  action=""
                   data-success-msg="Message sent successfully!"
                   data-err-msg="Oops! something went wrong, please try again."
                 >
@@ -840,8 +840,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <!-- logo -->
-                <div class="logo" title="Anup">
-                  <h1><a href="#">ANUP</a></h1>
+                <div class="logo" title="Amit">
+                  <h1><a href="#">AMIT</a></h1>
                 </div>
               </div>
               <div class="col-lg-6">
