--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Anup develops the best quality website that serves for the long-term. Well-documented, clean, easy and elegant interface helps any non-technical clients." />
+    content="Amit develops the best quality website that serves for the long-term. Well-documented, clean, easy and elegant interface helps any non-technical clients." />
   <meta name="keywords"
     content="portfolio, agency, business, clean, company, corporate, creative, gallery, rtl, modern, photography, vue, vuejs, responsive, sass" />
 
@@ -55,7 +55,7 @@
         }">
         <div class="container">
           <!-- logo -->
-          <div class="logo" title="Anup">
+          <div class="logo" title="Amit">
             <h1><a href="#">AMIT</a></h1>
           </div>
 
@@ -145,13 +145,13 @@
         <div class="social">
           <ul>
             <li>
-              <a href="https://github.com/kumaranup594/" target="_blank" rel="noreferrer"
+              <a href="https://github.com/kumarAmit594/" target="_blank" rel="noreferrer"
                 v-tooltip="{text: 'GitHub', dir: 'right'}">
                 <i class="fa fa-github" aria-hidden="true"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/ianup.nexgi/" target="_blank" rel="noreferrer"
+              <a href="https://www.instagram.com/iAmit.nexgi/" target="_blank" rel="noreferrer"
                 v-tooltip="{text: 'Instagram', dir: 'right'}">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
@@ -198,7 +198,7 @@
                     <img src="assets/images/icons/check-mark.png" alt="Completed Projects" />
                   </div>
                   <div class="text">
-                    <h3>200+</h3>
+                    <h3>60+</h3>
                     <strong>Completed Projects</strong>
                   </div>
                   <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -210,7 +210,7 @@
                     <img src="assets/images/icons/happy.png" alt="Happy Clients" />
                   </div>
                   <div class="text">
-                    <h3>130+</h3>
+                    <h3>50+</h3>
                     <strong>Happy Clients</strong>
                   </div>
                   <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -243,13 +243,13 @@
                 </h2>
                 <p>
                   I've been working as a PHP Full Stack Web Developer for the
-                  last 9 years, and I specialise in both frontend and backend
+                  last 3 years, and I specialise in both frontend and backend
                   development, especially for WordPress & Laravel. In total, I
                   have worked on almost 200+ projects, including frontend &
                   backend.
                 </p>
                 <p>
-                  In last 9 years. I have worked with 25+ openSource project,
+                  In last 3 years. I have worked with 25+ openSource project,
                   50+ marketing integrated, handled 100+ direct clients
                   queries and provided them customised solution. So I can
                   deliver you solution beyond just development using master of
@@ -499,7 +499,7 @@
                   <img src="assets/images/icons/address.png" alt="Address" />
                   <div>
                     <strong>Address:</strong>
-                    114B, 3rd floor Dwarka Mor, New Delhi
+                    A-151, Gokul Home, Sector 63 A, Noida, UP, India
                   </div>
                 </li>
                 <li>
@@ -508,7 +508,7 @@
                     <strong>Phone:</strong>
                     <ul>
                       <li>
-                        <a href="tel:+917835851114" class="ltr-dir">+91 7835851114</a>
+                        <a href="tel:+917903915480" class="ltr-dir">+91 7903915480</a>
                       </li>
                     </ul>
                   </div>
@@ -519,7 +519,7 @@
                     <strong>Email:</strong>
                     <ul>
                       <li>
-                        <a href="mailto:kumaranup594@gmail.com">kumaranup594@gmail.com</a>
+                        <a href="mailto:amit.aaryan480@gmail.com">amit.aaryan480@gmail.com</a>
                       </li>
                     </ul>
                   </div>
@@ -529,14 +529,14 @@
               <!-- social links -->
               <ul class="social">
                 <li>
-                  <a href="https://github.com/kumaranup594/" target="_blank" rel="noreferrer"
+                  <a href="https://github.com/amit-neo/" target="_blank" rel="noreferrer"
                     v-tooltip="{text: 'GitHub', dir: 'top'}">
                     <i class="fa fa-github" aria-hidden="true"></i>
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/in/ianup/" target="_blank" rel="noreferrer"
-                    v-tooltip="{text: 'Instagram', dir: 'top'}">
+                  <a href="https://www.linkedin.com/in/dev-amit-kumar/" target="_blank" rel="noreferrer"
+                    v-tooltip="{text: 'LinkedIn', dir: 'top'}">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                   </a>
                 </li>
@@ -546,7 +546,7 @@
             <!-- contact form -->
             <div class="col-lg-6" id="contact-form">
               <form ref="contactForm" class="contact-form form-styled"
-                action="https://ai.nexgi.com/leads/web_api/save_lead" data-success-msg="Message sent successfully!"
+                action="" data-success-msg="Message sent successfully!"
                 data-err-msg="Oops! something went wrong, please try again.">
                 <div class="group">
                   <label>Name</label>
@@ -619,13 +619,13 @@
           <div class="row">
             <div class="col-lg-6">
               <!-- logo -->
-              <div class="logo" title="Anup">
-                <h1><a href="https://www.linkedin.com/in/ianup/">ANUP</a></h1>
+              <div class="logo" title="Amit">
+                <h1><a href="https://www.linkedin.com/in/iAmit/">AMIT</a></h1>
               </div>
             </div>
             <div class="col-lg-6">
               &copy; {{ copyrightDate }} Proudly Powered by
-              <a href="https://www.linkedin.com/in/ianup/" target="_blank" rel="noopener">Me</a>
+              <a href="https://www.linkedin.com/in/dev-amit-kumar/" target="_blank" rel="noopener">Me</a>
             </div>
           </div>
         </div>
