--- a/rtl-index-2.html
+++ b/rtl-index-2.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="portfolio, agency, business, clean, company, corporate, creative, gallery, rtl, modern, photography, vue, vuejs, responsive, sass">
 
     <!-- title of the browser tab -->
-    <title>Anup</title>
+    <title>Amit</title>
 
     <!-- favicon -->
     <link rel="icon" href="assets/favicon.ico">
