Update links and fixed form data format

--- a/index.html
+++ b/index.html
@@ -145,27 +145,27 @@
         <div class="social">
           <ul>
             <li>
-              <a href="https://github.com/kumarAmit594/" target="_blank" rel="noreferrer"
+              <a href="https://github.com/amit-neo/" target="_blank" rel="noreferrer"
                 v-tooltip="{text: 'GitHub', dir: 'right'}">
                 <i class="fa fa-github" aria-hidden="true"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/iAmit.nexgi/" target="_blank" rel="noreferrer"
+              <a href="https://www.instagram.com/im_amit.aaryan/" target="_blank" rel="noreferrer"
                 v-tooltip="{text: 'Instagram', dir: 'right'}">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </li>
-            <!-- <li>
+            <li>
                 <a
-                  href="#"
+                  href="https://www.linkedin.com/in/dev-amit-kumar/"
                   target="_blank"
                   rel="noreferrer"
                   v-tooltip="{text: 'LinkedIn', dir: 'right'}"
                 >
                   <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </a>
-              </li> -->
+              </li>
           </ul>
         </div>
 
@@ -545,7 +545,7 @@
 
             <!-- contact form -->
             <div class="col-lg-6" id="contact-form">
-              <form ref="contactForm" class="contact-form form-styled"
+              <form name="contact-form" ref="contactForm" class="contact-form form-styled"
                 action="" data-success-msg="Message sent successfully!"
                 data-err-msg="Oops! something went wrong, please try again.">
                 <div class="group">
@@ -620,7 +620,7 @@
             <div class="col-lg-6">
               <!-- logo -->
               <div class="logo" title="Amit">
-                <h1><a href="https://www.linkedin.com/in/iAmit/">AMIT</a></h1>
+                <h1><a href="https://www.linkedin.com/in/dev-amit-kumar/">AMIT</a></h1>
               </div>
             </div>
             <div class="col-lg-6">
@@ -666,6 +666,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.6.9/plyr.min.js"
     integrity="sha512-Wt3CCBrK4mMw9PUEzDpKPMN7cLCq7/Uu7vxRtG+EQv+DO9Yae/LKSQTfziDj51y1yeSqqLt142lNyJtBXG/gSw=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>  
   <script src="scripts/main.js"></script>
 </body>
 </body>
