Fixed email form body

--- a/index.html
+++ b/index.html
@@ -607,6 +607,9 @@
                   </div>
                 </div>
               </form>
+              <div class="alert alert-success" v-if ="submitted ==='OK' || submitted">
+                Your enquiry has been sent successfully! I will connect you shortly.
+              </div>
             </div>
           </div>
         </div>
