--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </p>
                 <div class="btns-container">
                   <a href="#contact" class="btn btn-primary" style="color: #fff">Hire Me</a>
-                  <a class="wrapper-play-btn" onclick='playPopupVideo("https://www.youtube.com/watch?v=eHeOnRdmfnk")'>
+                  <!-- <a class="wrapper-play-btn" onclick='playPopupVideo("https://www.youtube.com/watch?v=eHeOnRdmfnk")'> -->
                   </a>
                 </div>
               </div>
