Fixed buttons UI in responsive mode

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </h2>
           <div class="btns-container">
             <a href="#contact" class="btn btn-primary">Hire Me</a>
-            <a href="#about" class="btn">About Me</a>
+            <a href="#about" class="btn about-me-btn">About Me</a>
           </div>
         </div>
 
