--- a/index.html
+++ b/index.html
@@ -427,11 +427,11 @@
               </li>
               <!-- end items list -->
 
-              <li>
-                <!-- <button class="more" @click="">
-                  <a href="#contact-form">Load more works</a>
-                </button> -->
-              </li>
+              <!-- <li>
+                <button class="more" @click="">
+                  <a onclick="loadMorePortfolio()">Load more works</a>
+                </button>
+              </li> -->
             </ul>
           </div>
         </div>
